--- a/bower.json
+++ b/bower.json
@@ -9,5 +9,22 @@
     "angular-animate": "~1.3.14",
     "angular-sanitize":"~1.3.14",
     "bootstrap": "3.3.4"
-  }
+  },
+  "ignore": [
+    ".bowerrc",
+    ".jshintrc",
+    ".editorconfig",
+    ".gitattributes",
+    "Gruntfile.js",
+    ".gitignore",
+    "*.html",
+    "lib",
+    "test",
+    "tmp"
+  ],
+  "devDependencies": {
+    "angular-mocks": ">=1.3.x",
+    "angular-scenario": ">=1.3.x"
+  },
+  "appPath": "app"
 }
