--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,8 @@
     "angular-resource": "~1.3.14",
     "angular-animate": "~1.3.14",
     "angular-sanitize":"~1.3.14",
-    "bootstrap": "3.3.4"
+    "bootstrap": "3.3.4",
+    "ng-lodash": "0.2.0"
   },
   "ignore": [
     ".bowerrc",
