--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "restify": "^3.0.1"
   },
   "devDependencies": {
+    
     "grunt": "^0.4.1",
     "grunt-autoprefixer": "^0.7.3",
     "grunt-bump": "^0.3.0",
     "grunt-concurrent": "^0.5.0",
+
     "grunt-contrib-clean": "^0.5.0",
     "grunt-contrib-concat": "^0.4.0",
     "grunt-contrib-connect": "^0.7.1",
@@ -23,18 +25,28 @@
     "grunt-contrib-uglify": "^0.4.0",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-contrib-sass": "~0.8.1",
+
     "grunt-filerev": "^0.2.1",
     "grunt-google-cdn": "^0.4.0",
-    "grunt-karma": "^0.10.1",
     "grunt-newer": "^0.7.0",
     "grunt-ng-annotate": "^0.3.0",
     "grunt-svgmin": "^0.4.0",
     "grunt-usemin": "^2.1.1",
     "grunt-wiredep": "^1.7.0",
     "jshint-stylish": "^0.2.0",
-    "karma-chrome-launcher": "^0.1.7",
+
     "karma-jasmine": "^0.3.5",
+    "jasmine-jquery": "*",
+    "jasmine-node": "*",
+    "request": "*",
+
+    "grunt-karma": "^0.10.1",
+    "karma-coverage": "*",
+    "karma-safari-launcher": "*",
+    "karma-firefox-launcher": "*",
+    "karma-chrome-launcher": "^0.1.7",
     "karma-phantomjs-launcher": "^0.1.4",
+
     "load-grunt-tasks": "^0.4.0",
     "time-grunt": "^0.3.1"
   },
