--- a/bower.json
+++ b/bower.json
@@ -7,9 +7,10 @@
     "angular-route": "~1.3.14",
     "angular-resource": "~1.3.14",
     "angular-animate": "~1.3.14",
-    "angular-sanitize":"~1.3.14",
-    "bootstrap": "3.3.4",
-    "ng-lodash": "0.2.0"
+    "angular-sanitize": "~1.3.14",
+    "bootstrap": "~3.3.4",
+    "ng-lodash": "~0.2.0",
+    "angular-ui-router": "~0.2.15"
   },
   "ignore": [
     ".bowerrc",
@@ -24,8 +25,8 @@
     "tmp"
   ],
   "devDependencies": {
-    "angular-mocks": ">=1.3.x",
-    "angular-scenario": ">=1.3.x"
+    "angular-mocks": "~1.3.x",
+    "angular-scenario": "~1.3.x"
   },
   "appPath": "app"
 }
