--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,8 @@
     "angular-sanitize": "~1.3.14",
     "bootstrap": "~3.3.4",
     "ng-lodash": "~0.2.0",
-    "angular-ui-router": "~0.2.15"
+    "angular-ui-router": "~0.2.13",
+    "angular-cookies": "~1.3.15"
   },
   "ignore": [
     ".bowerrc",
