--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "curry": "^1.2.0",
     "mongoose": "3.6.20",
     "node-promise": "^0.5.12",
     "restify": "^3.0.1",
