--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "mongoose": "3.6.20",
     "node-promise": "^0.5.12",
     "restify": "^3.0.1",
-    "restify-cookies": "^0.1.1"
+    "restify-cookies": "^0.1.1",
+    "optimist": "0.6.1"
   },
   "devDependencies": {
     "grunt": "^0.4.1",
